fix nav collapse, tweak colors and spacing

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,5 @@
 $primary: rgb(52, 124, 206);
-$secondary: rgb(104, 164, 233);
+$secondary: rgb(50, 142, 248);
 
 .component {
     background-color: red;
